--- a/behat.yml
+++ b/behat.yml
@@ -10,7 +10,7 @@ default:
       paths:
         - '%paths.base%/features/'
       contexts:
-        - Features\VisualizePointsContext
+        - Features\EmailContext
 #  extensions:
 #    DVDoug\Behat\CodeCoverage\Extension:
 #      filter:
