--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     ],
     "require": {
         "php": ">=8.3",
-        "symfony/mailer": "^7.0"
+        "symfony/mailer": "^7.0",
+        "symfony/brevo-mailer": "^7.0"
     },
     "require-dev": {
         "infection/extension-installer": "0.1.2",
