création d'une classe Contact + ajout dans les differents instances de Sender/Recipient + résolution d'erreurs

--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
     },
     "autoload-dev": {
         "psr-4" : {
-            "EmailSender\\Tests\\" : "tests/"
+            "EmailSender\\Tests\\" : "tests/unit",
+            "EmailSender\\Integration\\" : "tests/integration",
         }
     },
     "config": {
