--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,10 @@
         "symfony/browser-kit": "^7.1",
         "symfony/orm-pack": "^2.4",
         "symfony/console": "^7.1",
-        "symfony/http-foundation": "^7.1"
+        "symfony/http-foundation": "^7.1",
+        "symfony/dotenv": "^7.1",
+        "guzzlehttp/guzzle": "^7.8",
+        "phpfastcache/phpfastcache": "^9.2"
     },
     "require-dev": {
         "infection/extension-installer": "0.1.2",
@@ -52,6 +55,12 @@
         "allow-plugins": {
             "infection/extension-installer": true,
             "symfony/runtime": true
+        }
+    },
+
+    "extra": {
+        "runtime": {
+            "dotenv_path": "src/Infrastructure/Shared/Symfony/.env"
         }
     }
 }
