--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,6 +12,11 @@
       <directory suffix="Test.php">tests/unit</directory>
     </testsuite>
   </testsuites>
+  <php>
+    <env name="APP_ENV" value="test" force="true"/>
+    <env name="KERNEL_CLASS" value="EmailSender\Infrastructure\Shared\Symfony\Kernel"/>
+    <env name="APP_DEBUG" value="0"/>
+  </php>
   <source>
     <include>
       <directory suffix=".php">src</directory>
