--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,7 @@
     ],
     "require": {
         "php": ">=8.3",
-        "symfony/mailer": "^7.0",
-        "symfony/brevo-mailer": "^7.0",
         "symfony/http-client": "^7.0",
-        "getbrevo/brevo-php": "^2.0",
         "symfony/framework-bundle": "^7.0",
         "symfony/runtime": "^7.1",
         "symfony/routing": "^7.1",
@@ -28,7 +25,6 @@
         "symfony/console": "^7.1",
         "symfony/http-foundation": "^7.1",
         "symfony/dotenv": "^7.1",
-        "guzzlehttp/guzzle": "^7.8",
         "phpfastcache/phpfastcache": "^9.2"
     },
     "require-dev": {
@@ -38,7 +34,8 @@
         "phpstan/phpstan": "1.10",
         "phpunit/phpunit": "^11",
         "squizlabs/php_codesniffer": "3.*",
-        "behat/behat": "^3.14"
+        "behat/behat": "^3.14",
+        "phariscope/doctrine-testing-tools": "^1.3"
     },
     "autoload": {
         "psr-4" : {
