--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,7 @@ services:
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
       - "$PWD/..:/var/emailsender"
     ports:
-      - "33080:80"
-      - "2443:443"
+      - "172.17.0.1:11680:80"
     networks:
       - emailsender-networks
 
@@ -22,7 +21,7 @@ services:
     image: "emailsender-php:latest"
     build:
       context: ../.
-      dockerfile: docker/php/Dockerfile
+      dockerfile: emailsender/docker/php/Dockerfile
       tags:
         - php-emailsender
     user: 1000:1000
@@ -30,9 +29,54 @@ services:
       - "$PWD/..:/var/emailsender"
       - "$PWD/..:$PWD/.."    
     working_dir: $PWD/..
+    env_file:
+      - secret.env
     networks:
       - emailsender-networks
 
+  emailsender-swagger-ui:
+    image: swaggerapi/swagger-ui:latest
+    container_name: "emailsender-swagger-ui"
+    restart: always
+    environment:
+      PORT: 8080
+      SUPPORTED_SUBMIT_METHODS: "['get', 'post', 'put', 'delete', 'patch']"
+      SWAGGER_JSON: /v1/doc.yaml
+    volumes:
+      - ./docker/swagger/v1:/v1
+    ports:
+      - "172.17.0.1:11602:8080"
+    networks:
+      - emailsender-networks
+
+  emailsender-mariadb:
+    image: emailsender-mariadb:latest
+    container_name: "emailsender-mariadb"
+    build:
+      dockerfile: docker/mariadb/Dockerfile
+    restart: always
+    volumes:
+      - /home/debian/project/emailsender-mariadb/_data:/var/lib/mysql
+      - ../../mariabackup:/backup
+    env_file:
+      - ./docker/mariadb/db.env
+    networks:
+      - emailsender-networks
+
+  emailsender-phpmyadmin:
+    image: phpmyadmin:latest
+    container_name: "emailsender-phpmyadmin"
+    restart: always
+    environment:
+      - PMA_HOST=emailsender-mariadb
+    depends_on:
+      - emailsender-mariadb
+    ports:
+      - "172.17.0.1:11690:80"
+    networks:
+      - emailsender-networks
+
+  
 networks:
   emailsender-networks:
     driver: bridge
@@ -40,8 +84,8 @@ networks:
     name: emailsender-networks
     ipam:
       config:
-        - subnet: fdff:1:1::/112
-          gateway: fdff:1:1::1
+        - subnet: fdff:1:2e::/112
+          gateway: fdff:1:2e::1
 
 volumes:
   emailsender-db:
