--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -24,7 +24,7 @@ http {
         listen [::]:80 default_server ipv6only=on;
 
         server_name localhost;
-        root /var/spark/src/public;
+        root /var/emailsender/src/public;
         index index.php;
 
         location / {
@@ -33,7 +33,7 @@ http {
 
         location ~ \.php$ {
             try_files $uri /index.php =404;
-            fastcgi_pass php:9000;
+            fastcgi_pass emailsender-php:9000;
             fastcgi_index index.php;
             fastcgi_buffers 16 16k;
             fastcgi_buffer_size 32k;
