--- a/src/Infrastructure/Shared/Symfony/.env
+++ b/src/Infrastructure/Shared/Symfony/.env
@@ -18,3 +18,4 @@ APP_ENV=dev
 APP_SECRET=a0a27fcbad90c8e6177a7b3a53e86f78
 KERNEL_CLASS='EmailSender\Infrastructure\Shared\Symfony\Kernel'
 ###< symfony/framework-bundle ###
+DATABASE_URL='mysql://root:logipro@emailsender-mariadb:3306/emailsender?serverVersion=10.11.5-MariaDB&amp;charset=utf8mb4'
